# Isaac-GR00T

./: .gitignore  .gitmodules  README.md  pyproject.toml
evals/g1_wbc/: eval_sim.py  finetune.sh
evals/g1_wbc/configs/default/: eval.yaml
evals/g1_wbc/configs/tasks/: pick_place.yaml
evaluations/gr00t_wbc/configs/: default.yaml  env.yaml
evaluations/gr00t_wbc/configs/tasks/: pick_place.yaml
evaluations/gr00t_wbc/scripts/: eval_sim.py  run_sim.py
examples/: eval_sim.py
examples/GR00T-WholeBodyControl/: README.md  pyproject.toml
getting_started/: 0_load_dataset.py  1_gr00t_inference.py  2_finetuning.py  3_1_new_embodiment_finetuning.py  5_policy_deployment.md  GR00T_inference.py  notebook.md
gr00t/data/: embodiment_tags.py
gr00t/data/dataset/: factory.py
gr00t/eval/utils/: config.py  helper.py
scripts/: eval_server.py  eval_sim.py
